# python-project-scaffolding.archetype

./: README.md  archetype.rhai  archetype.yaml
contents/base/{{ project-name }}/: Dockerfile  README.md  pyproject.toml
contents/base/{{ project-name }}/.github/workflows/: build-dev.yml  cut-tag.yml  publish.yml  test.yml
contents/base/{{ project-name }}/.platform/kubernetes/base/: application.yaml  kustomization.yaml
contents/base/{{ project-name }}/manage/: docker.py
contents/transports/fastapi/{{ project-name }}/src/{{ project_name }}/: main.py
contents/transports/grpc/{{ project-name }}/protobuf/{{ project_name }}/grpc/: {{ project-prefix }}-{{ project-suffix}}.proto
contents/transports/grpc/{{ project-name }}/src/{{ project_name }}/: main.py
contents/transports/none/{{ project-name }}/src/{{ project_name }}/: main.py
